# deepl-wiki

./: .gitignore  ARCHITECTURE_PLAN.md  SETUP.md  deepl_wiki_update.yml
deepl-wiki-agents/: README.md  pyproject.toml  requirements.txt
deepl-wiki-agents/agents/: __init__.py  __main__.py  cli.py
deepl-wiki-agents/agents/shared/: __init__.py  llama_client.py
deepl-wiki-agents/deepl_wiki_agents/: __init__.py
deepl-wiki-agents/deepl_wiki_agents/shared/: __init__.py
deepl-wiki-backend/: README.md  hello.py  pyproject.toml  requirements.txt  run_api.py  run_setup.py
deepl-wiki-backend/api/: API_DOCUMENTATION.md  API_ROUTES.md  main.py
deepl-wiki-backend/api/models/: schemas.py
deepl-wiki-backend/api/routes/: chat.py  files.py  health.py  repositories.py
deepl-wiki-backend/api/utils/: dependencies.py
deepl-wiki-backend/deepl-wiki-agents/: RUNNING_GUIDE.md  system_prompt.md
deepl-wiki-backend/deepl-wiki-agents/agents/: chat_agent.py  cli.py  index_repo_agent.py  mono_repo_generator.py  push_agent.py
deepl-wiki-backend/deepl-wiki-cli/: README.md  USAGE.md  deepl-wiki.bat  deepl_wiki.db  deepl_wiki_agents.py  migrate.py  setup.py  test_cli.py  test_running_guide.py
deepl-wiki-backend/deepl-wiki-cli/cli/: __init__.py  __main__.py  main.py
deepl-wiki-backend/mono_repo_docs/: README.md
deepl-wiki-frontend/: README.md  package-lock.json  package.json
deepl-wiki-frontend/src/app/: globals.css  page.tsx
deepl-wiki-frontend/src/components/: AdvancedTypingIndicator.tsx  ChatInterface.tsx  DiagramRenderer.tsx  DiagramVisualization.tsx  ErrorBoundary.tsx  (+9 more)
(+29 files in other folders)
